// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeInput expect to render 1`] = `
<div
  className="root noRefinement"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label
      className="label"
    >
      <input
        className="input inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="label"
    >
      <input
        className="input inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
      />
    </label>
    <button
      className="submit"
      disabled={false}
      type="submit"
    >
      Go
    </button>
  </form>
</div>
`;

exports[`RangeInput expect to render with disabled state 1`] = `
<div
  className="root noRefinement"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label
      className="label"
    >
      <input
        className="input inputMin"
        disabled={true}
        max={20}
        min={480}
        onChange={[Function]}
        placeholder={480}
        step={1}
        type="number"
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="label"
    >
      <input
        className="input inputMax"
        disabled={true}
        max={20}
        min={480}
        onChange={[Function]}
        placeholder={20}
        step={1}
        type="number"
      />
    </label>
    <button
      className="submit"
      disabled={true}
      type="submit"
    >
      Go
    </button>
  </form>
</div>
`;

exports[`RangeInput expect to render with values 1`] = `
<div
  className="root"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label
      className="label"
    >
      <input
        className="input inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
        value={20}
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="label"
    >
      <input
        className="input inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
        value={480}
      />
    </label>
    <button
      className="submit"
      disabled={false}
      type="submit"
    >
      Go
    </button>
  </form>
</div>
`;

exports[`RangeInput onChange expect to update the state when max change 1`] = `
<div
  className="root"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label
      className="label"
    >
      <input
        className="input inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="label"
    >
      <input
        className="input inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
        value={480}
      />
    </label>
    <button
      className="submit"
      disabled={false}
      type="submit"
    >
      Go
    </button>
  </form>
</div>
`;

exports[`RangeInput onChange expect to update the state when min change 1`] = `
<div
  className="root"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label
      className="label"
    >
      <input
        className="input inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
        value={20}
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="label"
    >
      <input
        className="input inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
      />
    </label>
    <button
      className="submit"
      disabled={false}
      type="submit"
    >
      Go
    </button>
  </form>
</div>
`;

exports[`RangeInput willReceiveProps expect to update the empty state from given props 1`] = `
<div
  className="root noRefinement"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label
      className="label"
    >
      <input
        className="input inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="label"
    >
      <input
        className="input inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
      />
    </label>
    <button
      className="submit"
      disabled={false}
      type="submit"
    >
      Go
    </button>
  </form>
</div>
`;

exports[`RangeInput willReceiveProps expect to update the empty state from given props 2`] = `
<div
  className="root noRefinement"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label
      className="label"
    >
      <input
        className="input inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="label"
    >
      <input
        className="input inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
      />
    </label>
    <button
      className="submit"
      disabled={false}
      type="submit"
    >
      Go
    </button>
  </form>
</div>
`;

exports[`RangeInput willReceiveProps expect to update the state from given props 1`] = `
<div
  className="root"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label
      className="label"
    >
      <input
        className="input inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
        value={40}
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="label"
    >
      <input
        className="input inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
        value={460}
      />
    </label>
    <button
      className="submit"
      disabled={false}
      type="submit"
    >
      Go
    </button>
  </form>
</div>
`;

exports[`RangeInput willReceiveProps expect to update the state from given props 2`] = `
<div
  className="root"
>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <label
      className="label"
    >
      <input
        className="input inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
        value={40}
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="label"
    >
      <input
        className="input inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
        value={460}
      />
    </label>
    <button
      className="submit"
      disabled={false}
      type="submit"
    >
      Go
    </button>
  </form>
</div>
`;
